--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
+   --font-poppins: "Poppins", sans-serif;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
@@ -143,6 +144,7 @@
   }
   body {
     @apply bg-background text-foreground;
+  
   }
 }
 
